# server/internal/api/router.go
@@ -8,6 +8,7 @@ import (
 	"do-your-dailies/server/internal/auth"
 	"do-your-dailies/server/internal/contracts"
 	"do-your-dailies/server/internal/domain/chorecompletions"
+	"do-your-dailies/server/internal/domain/choreinsights"
 	"do-your-dailies/server/internal/domain/chorequeue"
 	"do-your-dailies/server/internal/domain/chores"
 	"do-your-dailies/server/internal/logging"
@@ -36,7 +37,8 @@ func (app *Application) setupRoutes() *chi.Mux {
 			app.ChoreInQueueCompletionStore,
 			app.Db,
 		),
-		ChoreQueueHandler: chorequeue.NewHandler(app.ChoreQueueStore, app.ChoreInQueueCompletionStore),
+		ChoreQueueHandler:    chorequeue.NewHandler(app.ChoreQueueStore, app.ChoreInQueueCompletionStore),
+		ChoreInsightsHandler: choreinsights.NewHandler(app.ChoreStore),
 	}
 
 	strictHandler := contracts.NewStrictHandlerWithOptions(server, nil, contracts.StrictHTTPServerOptions{
